<resources>
    <string name="app_name" translatable="false">Thinder</string>
    <string name="insert_email">Enter email address</string>
    <string name="insert_password">Enter password</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="first_name">First name</string>
    <string name="insert_first_name">Enter first name</string>
    <string name="last_name">Last name</string>
    <string name="insert_last_name">Enter last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="university">University</string>
    <string name="choose_university">Pick university</string>
    <string name="registration">Registration</string>
    <string name="forgot_password_text">You have received a code by e-mail which you can use to reset your password.</string>
    <string name="insert_code">Enter code</string>
    <string name="new_password">New password</string>
    <string name="code">Code</string>
    <string name="home_screen">Home</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="personal_data">Personal data</string>
    <string name="academical_degree">Academic degree</string>
    <string name="building">Building</string>
    <string name="insert_building">Enter building address</string>
    <string name="room">Room</string>
    <string name="insert_room">Enter room number</string>
    <string name="phone_number">Phone number</string>
    <string name="insert_phone_number">Enter phone number</string>
    <string name="institute">Institute</string>
    <string name="insert_institute">Enter institute</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="created_theses">Created theses</string>
    <string name="action_add">Add</string>
    <string name="create_thesis">Create thesis</string>
    <string name="edit_thesis">Edit thesis</string>
    <string name="name_of_thesis">Thesis name</string>
    <string name="insert_name_of_thesis">Enter thesis name</string>
    <string name="task">Task</string>
    <string name="add_task">Add task description</string>
    <string name="motivation">Motivation</string>
    <string name="add_motivation">Add motivation description</string>
    <string name="student_questions">Questions for the student</string>
    <string name="add_questions">Add questions</string>
    <string name="supervising_professor">Supervising professor</string>
    <string name="insert_supervising_professor">Enter supervising professor</string>
    <string name="add_courses_of_study">Add courses of study</string>
    <string name="add_images_from_gallery">Add images from gallery</string>
    <string name="choose_courses_of_study">Choose courses of study</string>
    <string name="search">Search</string>
    <string name="verification_successful">Your verification was successful!</string>
    <string name="token_error">The email token is no longer valid. A new token has been sent to you by mail.</string>
    <string name="verification_failure">Your verification was not successful.</string>
    <string name="last_step">One last step remaining</string>
    <string name="look_at_mail">An email has been sent to your mailbox. Enter the token it contains in the field below and press \"VERIFY TOKEN\" to complete the registration.</string>
    <string name="verification_ongoing">The given token is currently undertaking verification.</string>
    <string name="verify_token">Verify token</string>
    <string name="insert_token">Enter token</string>
    <string name="token">Token</string>
    <string name="request_password_reset">Enter your mail and press the button to perform a password reset request.</string>
    <string name="send_request">Send request</string>
    <string name="statistics">Statistics</string>
    <string name="like_dislike_ratio">Like/dislike-ratio</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="show_image_selection">Show image selection</string>
    <string name="open_image_picker">Open image picker</string>
    <string name="open_image_picker_text">Making a new selection will override the previous one</string>
    <string name="open">Open</string>
    <string name="your_image_selection">Your image selection</string>
    <string name="total_rating_number">Total rating count:</string>
    <string name="successful_password_change">Password change has been successful</string>
    <string name="failure">Failure</string>

    <!-- Student Strings -->
    <string name="swipe_screen">Swipe screen</string>
    <string name="fill_out_form">Fill out form</string>
    <string name="liked_theses">Liked theses</string>
    <string name="details">Details</string>
    <string name="further_information">Further Information</string>
    <string name="supervisor_name">Supervisor name</string>
    <string name="courses_of_study">Courses of study</string>
    <string name="form">Form</string>
    <string name="contact">Contact</string>
    <string name="images">Images</string>
    <string name="insert_answers">Enter answers</string>
    <string name="send_form">Send form</string>
    <string name="account_remove_text">Are you sure you want to delete your account?</string>
    <string name="account_remove">Delete account</string>
    <string name="save_successful">Data was saved successfully.</string>
    <string name="remove_thesis">Delete Thesis</string>
    <string name="remove_thesis_text">Are you sure you want to delete this thesis?</string>
    <string name="card_stack_empty">The card stack ist empty</string>
    <string name="no_cards_available_for_swipe">There are no swipeable cards. As soon as a new fitting thesis gets posted it will be shown on your card stack.</string>
    <string name="refresh">Refresh</string>

    <!-- Registration View Model Strings -->
    <string name="no_password_error">Password field must not be empty</string>
    <string name="password_to_short_error">Password too short</string>
    <string name="password_not_safe_error">Password needs to contain at least one number and one upper case letter</string>
    <string name="no_password_confirmation_error">Password confirmation field must not be empty</string>
    <string name="passwords_do_not_match_error">Passwords do not match</string>
    <string name="no_email_error">E-mail field must not be empty</string>
    <string name="invalid_email_error">Invalid E-mail address</string>
    <string name="no_first_name_error">First name field must not be empty</string>
    <string name="no_last_name_error">Last name field must not be empty</string>

    <!-- Edit Profile View Model Strings -->
    <string name="no_building_error">Building field must not be empty</string>
    <string name="no_room_error">Room field must not be empty</string>
    <string name="no_phone_number_error">Phone number field must not be empty</string>
    <string name="invalid_phone_number_error">Invalid phone number</string>
    <string name="no_institute_error">Institute field must not be empty</string>
    <string name="edit_profile_success_message">Profile data was updated successfully</string>
    <string name="no_courses_of_study_error_message">At least one course of study must be selected</string>
    <string name="delete_successful">Data was deleted successfully</string>

    <!-- Edit Thesis View Model Strings -->
    <string name="no_title_error">The name of the thesis must not be empty</string>
    <string name="no_task_description_error">The description of the thesis must not be empty</string>
    <string name="no_motivation_error">The motivation for the thesis must not be empty</string>
    <string name="no_questions_error">The questions for the student must not be empty</string>
    <string name="no_professor_error">A professor must be assigned to the thesis</string>
    <string name="no_courses_of_study_error">Courses of study must be assigned to the thesis</string>
    <string name="save_thesis_successfully">Thesis was saved successfully</string>

    <string name="send_form_success">Sending successful</string>
    <!-- Model Return Strings -->
    <string name="failure_on_call">Failed HTTP request</string>
    <string name="unsuccessful_response">Unsuccessful server response</string>
    <string name="exception_during_HTTP_call">An error occurred, please try again or restart the application</string>
    <string name="timeout_exception">The server is currently offline or under a high workload, please try again later</string>
    <string name="failed_login">The entered password and/or the email address is incorrect</string>
</resources>