<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_nav"
    app:startDestination="@id/studentProfileFragment">

    <fragment
        android:id="@+id/studentProfileFragment"
        android:name="com.hfad.thinder.ui.student.StudentProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_student_profile">
        <action
            android:id="@+id/action_studentProfileFragment_to_coursesOfStudyStudentFragment"
            app:destination="@id/coursesOfStudyStudentFragment" />
    </fragment>
    <fragment
        android:id="@+id/fillOutFormFragment"
        android:name="com.hfad.thinder.ui.student.FillOutFormFragment"
        android:label="@string/fill_out_form"
        tools:layout="@layout/fragment_fill_out_form" />
    <fragment
        android:id="@+id/likedThesesFragment"
        android:name="com.hfad.thinder.ui.student.LikedThesesFragment"
        android:label="@string/liked_theses"
        tools:layout="@layout/fragment_liked_theses">
        <action
            android:id="@+id/action_likedThesesFragment_to_likedThesisDetailedFragment"
            app:destination="@id/likedThesisDetailedFragment" />
    </fragment>
    <fragment
        android:id="@+id/swipeScreenFragment"
        android:name="com.hfad.thinder.ui.student.SwipeScreenFragment"
        android:label="@string/swipe_screen"
        tools:layout="@layout/fragment_swipe_screen" />
    <fragment
        android:id="@+id/likedThesisDetailedFragment"
        android:name="com.hfad.thinder.ui.student.LikedThesisDetailedFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_liked_thesis_detailed">
        <action
            android:id="@+id/action_likedThesisDetailedFragment_to_fillOutFormFragment"
            app:destination="@id/fillOutFormFragment" />
        <action
            android:id="@+id/action_likedThesisDetailedFragment_to_imageGalleryFragmentStudent"
            app:destination="@id/imageGalleryFragmentStudent" />
    </fragment>
    <fragment
        android:id="@+id/coursesOfStudyStudentFragment"
        android:name="com.hfad.thinder.ui.student.CoursesOfStudyStudentFragment"
        android:label="@string/courses_of_study" />
    <fragment
        android:id="@+id/imageGalleryFragmentStudent"
        android:name="com.hfad.thinder.ui.student.ImageGalleryStudentFragment"
        android:label="@string/images" />
</navigation>