<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/forgot_password"
        app:titleTextColor="@android:color/black">

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_400" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingLeft="@dimen/fab_margin"
        android:paddingTop="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin">

        <TextView
            android:id="@+id/twforgotpassword"
            style="@style/body_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/twcode"
            style="@style/body_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twforgotpassword" />

        <EditText
            android:id="@+id/etcode"
            style="@style/headline_h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_code"
            android:hint="@string/insert_code"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twcode" />

        <TextView
            android:id="@+id/twloginpassword"
            style="@style/body_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etcode" />

        <EditText
            android:id="@+id/etLoginPassword"
            style="@style/headline_h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_lock"
            android:hint="@string/insert_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twloginpassword" />

        <TextView
            android:id="@+id/twconfirmpassword"
            style="@style/body_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

        <EditText
            android:id="@+id/etconfirmpassword"
            style="@style/headline_h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_lock_open"
            android:hint="@string/insert_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twconfirmpassword" />

        <Button
            android:id="@+id/btRegister"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_400"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

