<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <data>

        <variable
            name="viewmodel"
            type="com.hfad.thinder.viewmodels.RegistrationViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/black"
            app:title="@string/registration"
            android:background="@color/white"></androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:id="@+id/twloginemail"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etLoginEMail"
                style="@style/headline_h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_mail"
                android:text="@={viewmodel.email}"
                android:hint="@string/insert_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twloginemail" />

            <TextView
                android:id="@+id/twfirstname"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLoginEMail" />

            <EditText
                android:id="@+id/etfirstname"
                style="@style/headline_h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:drawableEnd="@drawable/ic_person_firstname"
                android:hint="@string/insert_first_name"
                android:inputType="textPersonName"
                android:text="@={viewmodel.firstName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twfirstname" />

            <TextView
                android:id="@+id/twlastname"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etfirstname" />

            <EditText
                android:id="@+id/etlastname"
                style="@style/headline_h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/insert_last_name"
                android:inputType="textPersonName"
                android:text="@={viewmodel.lastName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twlastname" />


            <TextView
                android:id="@+id/twloginpassword"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etlastname" />

            <EditText
                android:id="@+id/etLoginPassword"
                style="@style/headline_h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/ic_lock"
                android:hint="@string/insert_password"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twloginpassword" />

            <TextView
                android:id="@+id/twconfirmpassword"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

            <EditText
                android:id="@+id/etconfirmpassword"
                style="@style/headline_h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/ic_lock_open"
                android:hint="@string/insert_password"
                android:inputType="textPassword"
                android:text="@={viewmodel.passwordConfirmation}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/twconfirmpassword" />

            <TextView
                android:id="@+id/etchooseuniversity"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/university"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etconfirmpassword" />

            <Spinner
                android:id="@+id/spchooseuniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@{viewmodel.universities}"
                android:selectedItemPosition="@={viewmodel.selectedItemPosition}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etchooseuniversity">

            </Spinner>

            <TextView
                android:id="@+id/twerrormsg"
                style="@style/body_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.registrationResult.errorMessage}"
                android:gravity="center"
                android:textColor="@color/red_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btRegister" />

            <Button
                android:id="@+id/btRegister"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_400"
                android:text="@string/register"
                android:onClick="@{() -> viewmodel.register()}"
                android:enabled="@{viewmodel.registrationFormState.dataValid}"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
