<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.hfad.thinder.viewmodels.user.PasswordResetRequestViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/send_request"
            app:titleTextColor="@android:color/black">

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btSendRequest"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/twRequestPasswordReset"
                        style="@style/body_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/request_password_reset" />

                    <TextView
                        android:id="@+id/twMail"
                        style="@style/body_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email" />

                    <EditText
                        android:id="@+id/etEMail"
                        style="@style/headline_h6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:drawableEnd="@drawable/ic_mail"
                        android:hint="@string/insert_email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.email}" />

                </LinearLayout>
            </ScrollView>


            <Button
                android:id="@+id/btSendRequest"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_400"
                android:text="@string/send_request"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="goToForgotPasswordActivity"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>


